Moving forward on positions keeper
